--- a/Ansiblefile.yml
+++ b/Ansiblefile.yml
@@ -1,7 +1,7 @@
 - name: Trying
   hosts: all
   tasks:
-   - name: Restarting oneagent
+   - name: Stopping oneagent
      service:
        name: oneagent
-       state: restarted
+       state: stopped
